--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -1,7 +1,7 @@
 include(CMakeFindDependencyMacro)
 
 # Tell library users about the Boost dependency
-find_dependency(Boost 1.53 HINTS ${CMAKE_CURRENT_LIST_DIR}/..)
+find_dependency(Boost 1.74 REQUIRED)
 
 # Add the targets file
 include("${CMAKE_CURRENT_LIST_DIR}/YOMM2Targets.cmake")
