Add transitive requirement on C++17

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ if(YOMM2_SHARED)
     PUBLIC $<TARGET_PROPERTY:Boost::headers,INTERFACE_INCLUDE_DIRECTORIES>
   )
   target_link_libraries(yomm2 PUBLIC Boost::headers)
+  target_compile_features(yomm2 PUBLIC cxx_std_17)
   if (${YOMM2_CHECK_ABI_COMPATIBILITY})
     message(STATUS "type: ${CMAKE_BUILD_TYPE} FLAGS: ${CMAKE_CXX_FLAGS_RELEASE}")
     if(CMAKE_BUILD_TYPE STREQUAL "Debug")
@@ -42,6 +43,7 @@ else()
     $<INSTALL_INTERFACE:include>
   )
   target_link_libraries(yomm2 INTERFACE Boost::headers)
+  target_compile_features(yomm2 INTERFACE cxx_std_17)
 endif()
 
 install(TARGETS yomm2
