Refactor CMake config file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ install(EXPORT YOMM2Targets
 )
 # Configure package config (tells using code about dependencies)
 configure_package_config_file(
-  cmake/Config.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/YOMM2Config.cmake
+  cmake/YOMM2Config.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/YOMM2Config.cmake
   INSTALL_DESTINATION lib/cmake/YOMM2
 )
 # Copy config files to install directory
