run dlopen example as test (and fix it)

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -38,18 +38,14 @@ add_test(NAME asteroids COMMAND asteroids)
 add_subdirectory(containers)
 add_test(NAME containers COMMAND containers)
 
-if(NOT MSVC AND NOT XCODE_VERSION)
-  set(CMAKE_SKIP_BUILD_RPATH TRUE)
+if(NOT MSVC AND NOT APPLE)
   add_executable(dl_main dl_main.cpp)
   add_library(dl_shared SHARED dl_shared.cpp)
   get_target_property(YOMM2_INCLUDE_DIRS YOMM2::yomm2 INTERFACE_INCLUDE_DIRECTORIES)
   target_include_directories(dl_shared PUBLIC ${YOMM2_INCLUDE_DIRS})
   add_dependencies(dl_main dl_shared)
-  if(APPLE)
-    set_target_properties(dl_shared PROPERTIES LINK_FLAGS "-Wl,-undefined,dynamic_lookup")
-  else()
-    set_target_properties(dl_main PROPERTIES LINK_FLAGS "-Wl,-export-dynamic")
-  endif()
+  set_target_properties(dl_main PROPERTIES LINK_FLAGS "-Wl,-export-dynamic")
   target_link_libraries(dl_main YOMM2::yomm2 dl)
   target_link_libraries(dl_shared YOMM2::yomm2)
-endif()
+  add_test(NAME dlopen COMMAND dl_main)
+  endif()
