use python from venv

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,10 +83,11 @@ set(readme_cpp "${CMAKE_SOURCE_DIR}/examples/README.cpp")
 
 if(${YOMM2_ENABLE_DOC})
   message(STATUS "Documentation generation enabled")
+  set(YOMM2_PYTHON ${CMAKE_SOURCE_DIR}/.venv/bin/python)
   add_custom_target(README_md ALL DEPENDS "${readme_md}")
   add_custom_command(
     OUTPUT "${readme_md}"
-    COMMAND ${CMAKE_SOURCE_DIR}/dev/code2md "${readme_cpp}" "${readme_md}"
+    COMMAND "${YOMM2_PYTHON}" ${CMAKE_SOURCE_DIR}/dev/code2md "${readme_cpp}" "${readme_md}"
     DEPENDS "${readme_cpp}")
 endif()
 
