--- a/docs.in/CMakeLists.txt
+++ b/docs.in/CMakeLists.txt
@@ -5,7 +5,7 @@ if(${YOMM2_ENABLE_DOC})
   add_custom_target(PAGES_README ALL DEPENDS "${readme_out}")
   add_custom_command(
     OUTPUT "${readme_out}"
-    COMMAND ${CMAKE_SOURCE_DIR}/dev/md2md "${readme_in}" "${readme_out}"
+    COMMAND "${YOMM2_PYTHON}" "${CMAKE_SOURCE_DIR}/dev/md2md" "${readme_in}" "${readme_out}"
     DEPENDS "${readme_in}")
 endif()
 
