always enable doc, but do not add doc targets to ALL

--- a/docs.in/reference/CMakeLists.txt
+++ b/docs.in/reference/CMakeLists.txt
@@ -10,15 +10,13 @@ set(entries "")
 foreach(cpp ${cpps})
     cmake_path(REMOVE_EXTENSION cpp LAST_ONLY OUTPUT_VARIABLE md)
 
-    if(${YOMM2_ENABLE_DOC})
-        set(md "${md}.md")
-        string(REPLACE "docs.in" "docs" md_out "${md}")
-        add_custom_command(
-            OUTPUT "${md_out}"
-            COMMAND "${YOMM2_PYTHON}" ${CMAKE_SOURCE_DIR}/dev/code2md "${cpp}" "${md_out}"
-            DEPENDS "${cpp};${code_deps}")
-        list(APPEND entries "${md_out}")
-    endif()
+    set(md "${md}.md")
+    string(REPLACE "docs.in" "docs" md_out "${md}")
+    add_custom_command(
+        OUTPUT "${md_out}"
+        COMMAND "${YOMM2_PYTHON}" ${CMAKE_SOURCE_DIR}/dev/code2md "${cpp}" "${md_out}"
+        DEPENDS "${cpp};${code_deps}")
+    list(APPEND entries "${md_out}")
 
     cmake_path(GET cpp STEM exe)
     set(exe "ref_${exe}")
@@ -28,17 +26,16 @@ foreach(cpp ${cpps})
     add_test(NAME "${exe}" COMMAND "${exe}")
 endforeach()
 
-if(${YOMM2_ENABLE_DOC})
-    file(GLOB_RECURSE MDs "*.md")
+file(GLOB_RECURSE MDs "*.md")
 
-    foreach(MD ${MDs})
-        string(REPLACE "docs.in" "docs" MD_out "${MD}")
-        add_custom_command(
-            OUTPUT "${MD_out}"
-            COMMAND "${YOMM2_PYTHON}" ${CMAKE_SOURCE_DIR}/dev/md2md "${MD}" "${MD_out}"
-            DEPENDS "${MD};${code_deps}")
-        list(APPEND entries "${MD_out}")
-        endforeach()
+foreach(MD ${MDs})
+    string(REPLACE "docs.in" "docs" MD_out "${MD}")
+    add_custom_command(
+        OUTPUT "${MD_out}"
+        COMMAND "${YOMM2_PYTHON}" ${CMAKE_SOURCE_DIR}/dev/md2md "${MD}" "${MD_out}"
+        DEPENDS "${MD};${code_deps}")
+    list(APPEND entries "${MD_out}")
+    endforeach()
 
-    add_custom_target(reference ALL DEPENDS "${entries}")
-endif()
+add_custom_target(REFERENCE DEPENDS "${entries}")
+add_dependencies(DOCS REFERENCE)
