--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,54 +3,54 @@
 # See accompanying file LICENSE_1_0.txt
 # or copy at http://www.boost.org/LICENSE_1_0.txt)
 
-add_executable(static_list static_list.cpp)
-target_link_libraries(static_list YOMM2::yomm2)
-add_test(NAME static_list COMMAND static_list)
+add_executable(test_static_list test_static_list.cpp)
+target_link_libraries(test_static_list YOMM2::yomm2)
+add_test(NAME test_static_list COMMAND test_static_list)
 
 add_executable(test_core test_core.cpp)
 target_link_libraries(test_core YOMM2::yomm2)
 add_test(NAME test_core COMMAND test_core)
 
-add_executable(templates templates.cpp)
-target_link_libraries(templates YOMM2::yomm2)
-add_test(NAME templates COMMAND templates)
+add_executable(test_templates test_templates.cpp)
+target_link_libraries(test_templates YOMM2::yomm2)
+add_test(NAME test_templates COMMAND test_templates)
 
-add_executable(compiler compiler.cpp)
-target_link_libraries(compiler YOMM2::yomm2)
-add_test(NAME compiler COMMAND compiler)
+add_executable(test_compiler test_compiler.cpp)
+target_link_libraries(test_compiler YOMM2::yomm2)
+add_test(NAME test_compiler COMMAND test_compiler)
 
-add_executable(blackbox blackbox.cpp)
-target_link_libraries(blackbox YOMM2::yomm2)
-add_test(NAME blackbox COMMAND blackbox)
+add_executable(test_blackbox test_blackbox.cpp)
+target_link_libraries(test_blackbox YOMM2::yomm2)
+add_test(NAME test_blackbox COMMAND test_blackbox)
 
 if (NOT WIN32)
-add_executable(manual_call manual_call.cpp)
-target_link_libraries(manual_call YOMM2::yomm2)
-add_test(NAME manual_call COMMAND manual_call)
+add_executable(test_manual_call test_manual_call.cpp)
+target_link_libraries(test_manual_call YOMM2::yomm2)
+add_test(NAME test_manual_call COMMAND test_manual_call)
 endif()
 
-add_executable(lab lab.cpp)
-target_link_libraries(lab YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
-add_test(NAME lab COMMAND lab)
+add_executable(test_lab test_lab.cpp)
+target_link_libraries(test_lab YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
+add_test(NAME test_lab COMMAND test_lab)
 
-add_executable(member_method member_method.cpp)
-target_link_libraries(member_method YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
-add_test(NAME member_method COMMAND member_method)
+add_executable(test_member_method test_member_method.cpp)
+target_link_libraries(test_member_method YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
+add_test(NAME test_member_method COMMAND test_member_method)
 
-add_executable(namespaces namespaces.cpp)
-target_link_libraries(namespaces YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
-add_test(NAME namespaces COMMAND namespaces)
+add_executable(test_namespaces test_namespaces.cpp)
+target_link_libraries(test_namespaces YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
+add_test(NAME test_namespaces COMMAND test_namespaces)
 
-add_executable(pointer_to_method pointer_to_method.cpp)
-target_link_libraries(pointer_to_method YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
-add_test(NAME pointer_to_method COMMAND pointer_to_method)
+add_executable(test_pointer_to_method test_pointer_to_method.cpp)
+target_link_libraries(test_pointer_to_method YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
+add_test(NAME test_pointer_to_method COMMAND test_pointer_to_method)
 
 if(YOMM2_ENABLE_BENCHMARKS AND NOT (WIN32 OR APPLE))
   add_executable(benchmarks benchmarks.cpp)
   target_link_libraries(
     benchmarks YOMM2::yomm2 benchmark::benchmark ${CMAKE_THREAD_LIBS_INIT})
-  add_executable(rdtsc-benchmark rdtsc-benchmark.cpp)
-  target_link_libraries(rdtsc-benchmark YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
+  add_executable(benchmark_rdtsc benchmark_rdtsc.cpp)
+  target_link_libraries(benchmark_rdtsc YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
 endif()
 
 add_executable(test_virtual_ptr_basic test_virtual_ptr_basic.cpp)
